# serializer version: 1
# name: test_lazyoperator_number.2
  set({
    'X',
    'Y',
  })
# ---
# name: test_lazyoperator_number.3
  -294.375
# ---
# name: test_lazyoperator_number.4
  Add(left=Add(left=Add(left=Add(left=Mul(left=TrueDiv(left=Mul(left=Sub(left=Add(left=Add(left=1, right=PlaceHolder(key='X')), right=PlaceHolder(key='Y')), right=5), right=3), right=16), right=Neg(left=PlaceHolder(key='X'), right=None)), right=Pos(left=PlaceHolder(key='Y'), right=None)), right=Abs(left=PlaceHolder(key='X'), right=None)), right=Mod(left=PlaceHolder(key='X'), right=PlaceHolder(key='Y'))), right=FloorDiv(left=PlaceHolder(key='X'), right=PlaceHolder(key='Y')))
# ---
# name: test_lazyoperator_number[repr]
  '((((((((((1+X)+Y)-5)*3)/16)*-X)++Y)+abs(X))+(X%Y))+(X//Y))'
# ---
